src/style.scss
$system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;

body,
html {
    font: normal 20px / 1.6 $system;
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
}

* {
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: #2198c0;

    &:hover {
        border-bottom: 2px solid #ddd;
    }
}

canvas {
    width: 100%;
    min-height: 200px;
    height: 200px;
}

section {
    padding: 100px 0;
    max-width: 600px;
    margin-left: 30%;
    counter-reset: figures;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        font-family: $system;
    }

    h1 {
        font-size: 40px;
    }

    img {
        max-width: 100%;
    }

    figure {
        padding: 10px;
        margin: 0;
        counter-increment: figures;
        display: flex;
        flex-direction: column;
        align-items: center;

        figcaption {
            margin-top: 10px;
            font-family: $system;
            font-size: 14px;
            text-align: center;

            &::before {
                content: "Figure " counter(figures) " —";
                font-weight: bold;
            }
        }
    }
}

.reference {
    font-size: 16px;
}

.table-of-contents {
    font-family: $system;
    position: fixed;
    top: 100px;
    left: 100px;
    right: 30%;
    width: 20%;
}

footer {
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    background: #eee;
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-family: $system;
}

label {
    display: flex;
    align-items: center;
    font-size: 90%;

    input {
        margin-right: 10px;
    }
}

code {
    font-size: 70%;
    font-family: "Menlo", "Meslo", "Consolas", monospace;
}

.fill,
main {
    width: 100%;
    height: 100%;
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.row {
    flex: 1;
    width: 100%;
    display: flex;
    flex-direction: row;
}

.divider {
    background: grey;
}

.panel {
    border: 0; //1px solid grey;
    // Fill space
    flex: 1;
    // Position sub-items centrally
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    .ace_editor {
        flex: 1;
        // !important because ace unhelpfully overrides these
        width: 100% !important;
        height: 100% !important;
    }
}

